--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 on:
   push:
   workflow_dispatch:
-permissions:
-  contents: write-all  
+permissions: write-all 
 jobs:
   build:
     uses: gardenlinux/package-build/.github/workflows/build.yml@more-info-on-release
