--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,3 +7,4 @@ jobs:
     uses: gardenlinux/package-build/.github/workflows/build.yml@more-info-on-release
     with:
       release: true
+      runs-on-arm64: ubuntu-24.04-arm
